[project]
name = "stockpulse-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "idna>=3.11",
    "lxml>=6.0.2",
    "praw>=7.8.1",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "yfinance>=1.0",
]
